border spacing fix

--- a/css/main.css
+++ b/css/main.css
@@ -425,7 +425,7 @@ textarea.text-input {
   width: 100%;
   display: table;
   border-collapse:separate;
-  border-spacing:28px;
+  border-spacing:0px 18px;
 }
 
 .grid-row {
